--- a/index.html
+++ b/index.html
@@ -4,82 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/index.css">
-  <script src="js/index.js"></script>
-  <title>HuLTech</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Lule Moses</title>
+  <script src="https://kit.fontawesome.com/fe1eb17f11.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <!----header starts here ---->
   <header>
-    <nav class="header">
-      <i>menu</i>
-      <h1 class="logo">HuLTech</h1>
-      <i>search</i>
+    <h1 class="logo">lule moses</h1>
+    <nav>
+        <ol>
+            <li>home</li>
+            <li>projects</li>
+            <li>testmonios</li>
+            <li>education</li>
+            <li>contact</li>
+        </ol>
+        <i class="fas fa-bars menuBtn"></i>
     </nav>
   </header>
+  <!----header ends here ---->
+  
+  <!---- side nav begins here ---->
   <aside>
-    
+    <i class="far fa-window-close menuBtn"></i>
+    <ul>
+        <li>home</li>
+        <li>projects</li>
+        <li>testmonios</li>
+        <li>education</li>
+        <li>contact</li>
+        <li>contact</li>
+    </ul>
   </aside>
-  <br/>
-  <main>
-    <ol>
-     <li>home</li>
-     <li>techfeeds</li>
-    </ol>
-    <section class="welcome">
-      <h2>Hi ,you are most welcome to hultech.</h2>
-      <p>LET'S EXPLORE TECH</p>
-      <p>
-       Hultech is a digtal plattform which provides you all the lastest tech news all around the global. Join us for the daily news tech report from the all universe.
-      </p>
-      <br/>
-      <button class="get_started">SUBCRIBE</button>
-    </section>
-    <section>
-      <h4 class="title_section">Recent technews</h4>
-      <article class="recent_post">
-        <div>
-            <a href="feeds/feeds.html">
-            <img src="images/j.jpg"/>
-            <h4 class="recent_title">facebook shuts down</h4>
-            </a>
-        </div>
-        <div>
-            <a href="feeds/feeds.html">
-            <img src="images/j.jpg"/>
-            <h4 class="recent_title">facebook shuts down</h4>
-            </a>
-        </div>
-        <div>
-            <a href="feeds/feeds.html">
-            <img src="images/j.jpg"/>
-            <h4 class="recent_title">go to all techfeeds</h4>
-            </a>
-        </div>
-      </article>
-    </section>
-    <section class="hul_insider">
-      <h4 class="title_section">become a hultech insider</h4>
-      <article>
-        <h2>become a hultech insider today and start reporting your tech reports and innovations.</h2>
-        <img src="images/j.jpg"/>
-        <p>Since our mission is to "To provide all tech news,innovations and different tech guides" so join us and let the world understand tecchnology. </p>
-      </article>
-    </section>
-  </main>
-  <br/>
-  <footer>
-    <section class="about_us">
-     <h3 class="title_section">About Us</h3>
-     <article>
-      <p>Hultech is a digtal plattform which provides you all the lastest news all over the global. We also develop software and do graphics</p>
-         <p>join us for our daily news tech report</p>
-     </article>
-    </section>
-    <div class="copyright">
-      <p>
-          &copy;All Rights Reserved At HuLTech Since 2020|2021
-      </p>
-    </div>
-  </footer>
+  <!---- side nav ends here ---->
+  <!----script javascripts external---->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
