cloned my github page on my pc

--- a/index.html
+++ b/index.html
@@ -1,44 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/index.css">
-  <title>Lule Moses</title>
-  <script src="https://kit.fontawesome.com/fe1eb17f11.js" crossorigin="anonymous"></script>
-</head>
-<body>
-  <!----header starts here ---->
-  <header>
-    <h1 class="logo">lule moses</h1>
-    <nav>
-        <ol>
-            <li>home</li>
-            <li>projects</li>
-            <li>testmonios</li>
-            <li>education</li>
-            <li>contact</li>
-        </ol>
-        <i class="fas fa-bars menuBtn"></i>
-    </nav>
-  </header>
-  <!----header ends here ---->
-  
-  <!---- side nav begins here ---->
-  <aside>
-    <i class="far fa-window-close menuBtn"></i>
-    <ul>
-        <li>home</li>
-        <li>projects</li>
-        <li>testmonios</li>
-        <li>education</li>
-        <li>contact</li>
-        <li>contact</li>
-    </ul>
-  </aside>
-  <!---- side nav ends here ---->
-  <!----script javascripts external---->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="js/index.js"></script>
-</body>
+    <!-- head begins with all the meta data,styles and scripts -->
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="author" content="HULTECH"/>
+        <meta name="title" content="HULTECH"/>
+        <meta name="description" content="A self-programmer from the streets of kampala"/>
+        <link rel="stylesheet" href="css/index.css"/>
+        <title>HULTECH</title>
+        <script src="https://kit.fontawesome.com/fe1eb17f11.js" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="js/index.js"></script>
+    </head>
+    <!-- head ends  -->
+    
+    <!-- header begins here with the logo and menu bar  -->
+    <header>
+        <h1 class="logo">HULTECH</h1>
+        <form class="_searchBox">
+            <input type="search"/>
+        </form>
+        <nav class="menu">
+            <ol class="top_navbars">
+                <li><a href="#"><i class="fas fa-home"></i><br/>home</a></li>
+                <li><a href="#"><i class="fas fa-tasks"></i><br/>tech news</a></li>
+                <li><a href="#"><i class="fas fa-hands-helping"></i><br/>subcribe</a></li>
+                <li><a href="#"><i class="far fa-envelope"></i><br/>contact</a></li>
+                <li><a href="#"><i class="far fa-address-card"></i><br/>about us</a></li>
+            </ol>
+            <i class="fas fa-bars menuBtn">menu</i>
+        </nav>
+    </header>
+    <!-- header ends here  -->
+    <!-- aside begins with the side nav here  -->
+    <!-- asid eends here   -->
+    <aside>
+        <i class="far fa-window-close menuBtn">x</i>
+        <h2 class="logo">HULTECH</h2>
+        <ul class="side_navbars">
+          <li><a href="#"><i class="fas fa-home"></i><br/>home</a></li>
+                <li><a href="#"><i class="fas fa-tasks"></i><br/>tech news</a></li>
+                <li><a href="#"><i class="fas fa-hands-helping"></i><br/>subcribe</a></li>
+                <li><a href="#"><i class="far fa-envelope"></i><br/>contact</a></li>
+                <li><a href="#"><i class="far fa-address-card"></i><br/>about us</a></li>  
+        </ul>
+    </aside>
+    <br/>
+    <!-- main begins with most of content here  -->
+    <!-- main ends with most of content here  -->
+    <main>
+        <section class="hero">
+            <h3 class="section_title">H your are most welcome to hultech lets explore tech. thank you <i class="fas fa-chart-line"></i></h3>
+            <img src="images/j.jpg"/>
+        </section>
+    </main>
 </html>
