--- a/index.html
+++ b/index.html
@@ -2,57 +2,182 @@
 <html>
     <!-- head begins with all the meta data,styles and scripts -->
     <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="author" content="HULTECH"/>
         <meta name="title" content="HULTECH"/>
         <meta name="description" content="A self-programmer from the streets of kampala"/>
-        <link rel="stylesheet" href="css/index.css"/>
-        <title>HULTECH</title>
-        <script src="https://kit.fontawesome.com/fe1eb17f11.js" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="js/index.js"></script>
+        <!--CSS -->
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/index.css">
+        <title>hultech</title>
     </head>
     <!-- head ends  -->
-    
-    <!-- header begins here with the logo and menu bar  -->
-    <header>
-        <h1 class="logo">HULTECH</h1>
-        <form class="_searchBox">
-            <input type="search"/>
-        </form>
-        <nav class="menu">
-            <ol class="top_navbars">
-                <li><a href="#"><i class="fas fa-home"></i><br/>home</a></li>
-                <li><a href="#"><i class="fas fa-tasks"></i><br/>tech news</a></li>
-                <li><a href="#"><i class="fas fa-hands-helping"></i><br/>subcribe</a></li>
-                <li><a href="#"><i class="far fa-envelope"></i><br/>contact</a></li>
-                <li><a href="#"><i class="far fa-address-card"></i><br/>about us</a></li>
-            </ol>
-            <i class="fas fa-bars menuBtn">menu</i>
-        </nav>
-    </header>
-    <!-- header ends here  -->
-    <!-- aside begins with the side nav here  -->
-    <!-- asid eends here   -->
-    <aside>
-        <i class="far fa-window-close menuBtn">x</i>
-        <h2 class="logo">HULTECH</h2>
-        <ul class="side_navbars">
-          <li><a href="#"><i class="fas fa-home"></i><br/>home</a></li>
-                <li><a href="#"><i class="fas fa-tasks"></i><br/>tech news</a></li>
-                <li><a href="#"><i class="fas fa-hands-helping"></i><br/>subcribe</a></li>
-                <li><a href="#"><i class="far fa-envelope"></i><br/>contact</a></li>
-                <li><a href="#"><i class="far fa-address-card"></i><br/>about us</a></li>  
-        </ul>
-    </aside>
-    <br/>
-    <!-- main begins with most of content here  -->
-    <!-- main ends with most of content here  -->
-    <main>
-        <section class="hero">
-            <h3 class="section_title">H your are most welcome to hultech lets explore tech. thank you <i class="fas fa-chart-line"></i></h3>
-            <img src="images/j.jpg"/>
-        </section>
-    </main>
+
+    <body>
+        <!-- header begins here with the logo and menu bar  -->
+        <header>
+            <div class="header">
+                <h1 class="logo">hulTech</h1>
+                <form>
+                    <input type="search" name="search" placeholder="enter your tech search here"/>
+                </form>
+                <nav>
+                    <ol class="topNavBar">
+                        <li><a href="#"><i class="fas fa-home"></i><br/>home</a></li>
+                        <li><a href="#"><i class="fas fa-tasks"></i><br/>feeds</a></li>
+                        <li><a href="#"><i class="fas fa-hands-helping"></i><br/>subcribe</a></li>
+                        <li><a href="#contact"><i class="far fa-envelope"></i><br/>contact</a></li>
+                        <li><a href="#about_us"><i class="far fa-address-card"></i><br/>about us</a></li>
+                    </ol>
+                    <p class="menuBtn button">menu</p>
+                </nav>
+            </div>
+        </header>
+        <!-- header ends here  -->
+        <!-- aside begins with the side nav here  -->
+        <aside>
+            <div class="aside">
+                <p class="menuBtn">close</p>
+                <ul class="sideNavBar">
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">news</a></li>
+                    <li><a href="#">search</a></li>
+                    <li><a href="#">about us</a></li>
+                    <li><a href="#">contact</a></li>
+                </ul>
+            </div>
+        </aside>
+        <!-- aside ends here   -->
+        <!-- main begins with most of content here  -->
+        <br>
+        <main>
+            <section class="home flex">
+                <div>
+                <img src="images/1633942015426.jpg"/>
+                </div>
+                <div>
+                <h1 class="section_title">welcome to my blogsites where dreams happens</h1>
+                <p>write a simple note about the website or the blogsite ie purpose ,location,services or products and many nothers
+                </p>
+                </div>
+            </section>
+            <section class="recent_blog">
+                <h4 class="section_title">Lastest news or blogs</h4>
+                <article class="flex">
+                    <div>
+                        <a href="#">
+                        <img src="images/1633942015426.jpg"/>
+                        <h3 class="recent_post">hi theere</h3>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                        <img src="images/1633942015426.jpg"/>
+                        <h3 class="recent_post">hi theere</h3>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                        <img src="images/1633942015426.jpg"/>
+                        <h3 class="recent_post">hi theere</h3>
+                        </a>
+                    </div>
+                </article>
+            </section>
+            <section>
+                <h4 class="section_title">Top stories</h4>
+                <article class="flex">
+                    <div>
+                        <a href="#">
+                        <img src="images/1633942015426.jpg"/>
+                        <h3 class="recent_post">hi theere</h3>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                        <img src="images/1633942015426.jpg"/>
+                        <h3 class="recent_post">hi theere</h3>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                        <img src="images/1633942015426.jpg"/>
+                        <h3 class="recent_post">hi theere</h3>
+                        </a>
+                    </div>
+                </article>
+            </section>
+        </main>
+        <!-- main ends with most of content here  -->
+        <br>
+        <!-- main ends with most of content here  -->
+        <footer>
+            <section id="about_us">
+                <h4 class="section_title">about us</h4>
+                <h5>Hultech</h5>
+                <p>hultech is a news tech website that provides you with all the lastest tech news</p>
+            </section>
+            <section class="footer_body">
+                <article class="flex">
+                    <div>
+                        <h5>Categories</h5>
+                        <ul>
+                            <li>device reviews</li>
+                            <li>software</li>
+                            <li>space</li>
+                            <li>education</li>
+                            <li>finances</li>
+                            <li>games</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h5>Categories</h5>
+                        <address>
+                          121, Clear Water Bay Road<br>
+                          Clear Water Bay, Kowloon<br>
+                          HONG KONG<br>
+                          Tel.: +852 1234 5678<br>
+                          Fax: +852 8765 4321<br>
+                          Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+                        </address>
+                    </div>
+                </article>
+                <article class="flex">
+                    <div class="social_media">
+                        <h5>follow us</h5>
+                        <ul>
+                            <li>device reviews</li>
+                            <li>software</li>
+                            <li>space</li>
+                            <li>education</li>
+                            <li>finances</li>
+                            <li>games</li>
+                        </ul>
+                    </div>
+                    <div class="contact_us" id="contact">
+                        <h5>Leave us a message. thank you</h5>
+                        <form>
+                            <textarea rows="10" cols="40" placeholder="Your message"></textarea>
+                            <br/>
+                            <input type="text" name="fullname" placeholder="Enter your Fullname"/>
+                            <br/>
+                            <input type="email" name="email" placeholder="example@email.com"/>
+                            <br/>
+                            <button>send</button>
+                        </form>
+                    </div>
+                </article>
+            </section>
+            <section class="copyright">
+                <p>&copy; hultech since 2020|2021</p>
+            </section>
+        </footer>
+        <!-- footer ends here  -->
+        <!-- script javascripts external -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://kit.fontawesome.com/fe1eb17f11.js" crossorigin="anonymous"></script>
+        <script src="js/index.js"></script>
+    </body>
 </html>
