completed structure of about us index

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li><a href="#"><i class="fas fa-tasks"></i><br/>feeds</a></li>
                         <li><a href="#"><i class="fas fa-hands-helping"></i><br/>subcribe</a></li>
                         <li><a href="#contact"><i class="far fa-envelope"></i><br/>contact</a></li>
-                        <li><a href="#about_us"><i class="far fa-address-card"></i><br/>about us</a></li>
+                        <li><a href="./about_us.html"><i class="far fa-address-card"></i><br/>about us</a></li>
                     </ol>
                     <p class="menuBtn button">menu</p>
                 </nav>
@@ -44,7 +44,7 @@
                     <li><a href="#">home</a></li>
                     <li><a href="#">news</a></li>
                     <li><a href="#">search</a></li>
-                    <li><a href="#">about us</a></li>
+                    <li><a href="./about_us.html">about us</a></li>
                     <li><a href="#">contact</a></li>
                 </ul>
             </div>
