completed styling of post card

--- a/index.html
+++ b/index.html
@@ -58,30 +58,29 @@
                 <img src="images/1633942015426.jpg"/>
                 </div>
                 <div>
-                <h1 class="section_title">welcome to my blogsites where dreams happens</h1>
-                <p>write a simple note about the website or the blogsite ie purpose ,location,services or products and many nothers
-                </p>
+                <h1 class="section_title">hi, let's explore tech</h1>
+                <p>Get all the lastest <b>Technews</b> here with a <b>Tech Report</b>.</p>
                 </div>
             </section>
             <section class="recent_blog">
-                <h4 class="section_title">Lastest news or blogs</h4>
+                <h4 class="section_title">Lastest Stories</h4>
                 <article class="flex">
-                    <div>
+                    <div class="post_card">
                         <a href="#">
-                        <img src="images/1633942015426.jpg"/>
-                        <h3 class="recent_post">hi theere</h3>
+                        <img src="images/iphone12.jpg"/>
+                        <h3 class="recent_post">Iphone 13 reviews</h3>
                         </a>
                     </div>
-                    <div>
+                    <div class="post_card">
                         <a href="#">
-                        <img src="images/1633942015426.jpg"/>
-                        <h3 class="recent_post">hi theere</h3>
+                        <img src="images/mars.jpg"/>
+                        <h3 class="recent_post">NASA discovers ice rocks on mars</h3>
                         </a>
                     </div>
-                    <div>
+                    <div class="post_card">
                         <a href="#">
-                        <img src="images/1633942015426.jpg"/>
-                        <h3 class="recent_post">hi theere</h3>
+                        <img src="images/win11.jpg"/>
+                        <h3 class="recent_post">whats new with windows 11</h3>
                         </a>
                     </div>
                 </article>
@@ -89,22 +88,22 @@
             <section>
                 <h4 class="section_title">Top stories</h4>
                 <article class="flex">
-                    <div>
+                    <div class="post_card">
                         <a href="#">
-                        <img src="images/1633942015426.jpg"/>
-                        <h3 class="recent_post">hi theere</h3>
+                        <img src="images/bitcon.jpg"/>
+                        <h3 class="recent_post">Bitcon rises and then fails in hours</h3>
                         </a>
                     </div>
-                    <div>
+                    <div class="post_card">
                         <a href="#">
-                        <img src="images/1633942015426.jpg"/>
-                        <h3 class="recent_post">hi theere</h3>
+                        <img src="images/pcstatus.jpg"/>
+                        <h3 class="recent_post">5 things to avoid to keep your pc clean</h3>
                         </a>
                     </div>
-                    <div>
+                    <div class="post_card">
                         <a href="#">
-                        <img src="images/1633942015426.jpg"/>
-                        <h3 class="recent_post">hi theere</h3>
+                        <img src="images/edu.jpg"/>
+                        <h3 class="recent_post">Free education online 2021</h3>
                         </a>
                     </div>
                 </article>
