completed all the page and my work environment

--- a/feeds.html
+++ b/feeds.html
@@ -26,8 +26,8 @@
                 <nav>
                     <ol class="topNavBar">
                         <li><a href="index.html"><i class="fa fa-home"></i><br/>home</a></li>
-                        <li><a href="feeds.html"><i class="fa fa-feed"></i><br/>feeds</a></li>
-                        <li class="active"><a href="./about_us.html"><i class="fa fa-address-card"></i><br/>about us</a></li>
+                        <li class="active"><a href="#"><i class="fa fa-feed"></i><br/>feeds</a></li>
+                        <li><a href="./about_us.html"><i class="fa fa-address-card"></i><br/>about us</a></li>
                         <li><a href="#contact"><i class="fa fa-envelope"></i><br/>contact</a></li>
                     </ol>
                     <i class="fa fa-bars menuBtn button"></i>
@@ -41,8 +41,8 @@
                 <i class="fa fa-close fa-lg menuBtn"></i>
                 <ul class="sideNavBar">
                     <li><a href="index.html">home</a></li>
-                    <li><a href="feeds.html">feeds</a></li>
-                    <li><a href="#">about us</a></li>
+                    <li><a href="#">feeds</a></li>
+                    <li><a href="./about_us.html">about us</a></li>
                     <li><a href="#contact">contact</a></li>
                 </ul>
             </div>
@@ -58,40 +58,7 @@
                     <li  class="active">feeds</li>
                 </ol>
             </section>
-            <section>
-                <h4 class="section_title">About Hultech</h4>
-                <article>
-                    <div class="flex">
-                    <P>Hultech is a news website that provide with all the lastest technology and science news,research and innovations from the all universe.</P>
-                    <h1>LET'S EXPLORE TECH</h1>
-                    </div>
-                </article>
-            </section>
-            <section>
-                <h4 class="section_title">categories</h4>
-                <article>
-                    <ul>
-                        <li>
-                            <a href="./index.html">Devices reviews<span class="details">get all the lastest information about your favorites devices and knowing how to perform different tasks.from specs to price we got you covered</span></a>
-                        </li>
-                        <li>
-                            <a href="./index.html">Devices reviews<span class="details">get all the lastest information about your favorites devices and knowing how to perform different tasks.from specs to price we got you covered</span></a>
-                        </li>
-                        <li>
-                            <a href="./index.html">Devices reviews<span class="details">get all the lastest information about your favorites devices and knowing how to perform different tasks.from specs to price we got you covered</span></a>
-                        </li>
-                        <li>
-                            <a href="./index.html">Devices reviews<span class="details">get all the lastest information about your favorites devices and knowing how to perform different tasks.from specs to price we got you covered</span></a>
-                        </li>
-                        <li>
-                            <a href="./index.html">Devices reviews<span class="details">get all the lastest information about your favorites devices and knowing how to perform different tasks.from specs to price we got you covered</span></a>
-                        </li>
-                        <li>
-                            <a href="./index.html">Devices reviews<span class="details">get all the lastest information about your favorites devices and knowing how to perform different tasks.from specs to price we got you covered</span></a>
-                        </li>
-                    </ul>
-                </article>
-            </section>
+            <h1>FEEDS</h1>
         </main>
         <!-- main ends with most of content here  -->
         <br>
@@ -107,8 +74,8 @@
                     <div>
                         <ul>
                            <li><a href="index.html">home</a></li>
-                           <li><a href="feeds.html">feeds</a></li>
-                           <li><a href="#">about us</a></li>
+                           <li><a href="#">feeds</a></li>
+                           <li><a href="./about_us.html">about us</a></li>
                            <li><a href="#contact">contact</a></li>
                         </ul>
                     </div>
