--- a/feeds.html
+++ b/feeds.html
@@ -9,7 +9,7 @@
         <meta name="title" content="HULTECH"/>
         <meta name="description" content="A self-programmer from the streets of kampala"/>
         <!--CSS -->
-        <link rel="icon" href="images/1633942015426.jpg">
+        <link rel="icon" href="images/logo10_17_85349.jpeg">
         <link rel="stylesheet" href="css/index.css">
         <title>hultech</title>
     </head>
