--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="title" content="HULTECH"/>
         <meta name="description" content="A self-programmer from the streets of kampala"/>
         <!--CSS -->
-        <link rel="icon" href="images/1633942015426.jpg">
+        <link rel="icon" href="images/logo10_17_85349.jpeg">
         <link rel="stylesheet" href="css/index.css">
         <title>hultech</title>
     </head>
@@ -159,12 +159,11 @@
                     <div class="social_media">
                         <h5>follow us</h5>
                         <ol>
-                            <li><a href="#"><i class="fa fa-facebook"> </i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"> </i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin "> </i></a></li>
-                            <li><a href="#"><i class="fa fa-github"> </i></a></li>
-                            <li><a href="#"><i class="fa fa-envelope"> </i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a> </li>
+                            <li><a href="#"><i class="fa fa-facebook fa-lg"> </i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter fa-lg"> </i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin fa-lg"> </i></a></li>
+                            <li><a href="#"><i class="fa fa-github fa-lg"> </i></a></li>
+                            <li><a href="#"><i class="fa fa-envelope fa-lg"> </i></a></li>
                         </ol>
                     </div>
                 </article>
