--- a/about_us.html
+++ b/about_us.html
@@ -9,8 +9,9 @@
         <meta name="title" content="HULTECH"/>
         <meta name="description" content="A self-programmer from the streets of kampala"/>
         <!--CSS -->
-        <link rel="icon" href="images/1633942015426.jpg">
+        <link rel="icon" href="images/logo10_17_85349.jpeg">
         <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/about_us.css">
         <title>hultech</title>
     </head>
     <!-- head ends  -->
@@ -55,39 +56,39 @@
                 <ol class="breadcrumb">
                     <li><a href="index.html">home</a></li>
                     <li>/</li>
-                    <li  class="active">feeds</li>
+                    <li  class="active">About us</li>
                 </ol>
             </section>
             <section>
                 <h4 class="section_title">About Hultech</h4>
                 <article>
                     <div class="flex">
-                    <P>Hultech is a news website that provide with all the lastest technology and science news,research and innovations from the all universe.</P>
-                    <h1>LET'S EXPLORE TECH</h1>
+                        <P>Hultech is a news website that provide with all the lastest technology and science news,research and innovations from the all universe.</P>
+                        <h1>LET'S EXPLORE TECH</h1>
+                    </div>
+                </article>
+            </section>
+            <section>
+                <h4 class="section-title">about author</h4>
+                <article class="flex">
+                    <div>
+                        <h2>Lule Moses</h2>
+                        <div class="flex">
+                        <img class="author" src="images/moses.jpg" alt="moses"/>
+                        <p>I am self-taught programmer. After one year of self-study mostly using Coursera, W3S, Youtube, Github and other internet resources. I have found it easier to learn what is most important in practice. Most of my work now has been focused on full stack web development and database management. Am passionate about programming and enjoy helping others learn to program. And i have created and run hultech to provide the world all the lastest technology and science in news the universe. Since learning in programming never stops, currently am still learning new things. Thank you</p>
+                        </div>
                     </div>
                 </article>
             </section>
             <section>
                 <h4 class="section_title">categories</h4>
                 <article>
-                    <ul>
+                    <ul class="categories">
                         <li>
                             <a href="./index.html">Devices reviews<span class="details">get all the lastest information about your favorites devices and knowing how to perform different tasks.from specs to price we got you covered</span></a>
                         </li>
                         <li>
-                            <a href="./index.html">Devices reviews<span class="details">get all the lastest information about your favorites devices and knowing how to perform different tasks.from specs to price we got you covered</span></a>
-                        </li>
-                        <li>
-                            <a href="./index.html">Devices reviews<span class="details">get all the lastest information about your favorites devices and knowing how to perform different tasks.from specs to price we got you covered</span></a>
-                        </li>
-                        <li>
-                            <a href="./index.html">Devices reviews<span class="details">get all the lastest information about your favorites devices and knowing how to perform different tasks.from specs to price we got you covered</span></a>
-                        </li>
-                        <li>
-                            <a href="./index.html">Devices reviews<span class="details">get all the lastest information about your favorites devices and knowing how to perform different tasks.from specs to price we got you covered</span></a>
-                        </li>
-                        <li>
-                            <a href="./index.html">Devices reviews<span class="details">get all the lastest information about your favorites devices and knowing how to perform different tasks.from specs to price we got you covered</span></a>
+                            <a href="./index.html">Space Tech<span class="details">get all the lastest information about our new home from earth mars and other planets</span></a>
                         </li>
                     </ul>
                 </article>
@@ -139,12 +140,11 @@
                     <div class="social_media">
                         <h5>follow us</h5>
                         <ol>
-                            <li><a href="#"><i class="fa fa-facebook"> </i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"> </i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin "> </i></a></li>
-                            <li><a href="#"><i class="fa fa-github"> </i></a></li>
-                            <li><a href="#"><i class="fa fa-envelope"> </i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a> </li>
+                            <li><a href="#"><i class="fa fa-facebook fa-lg"> </i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter fa-lg"> </i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin  fa-lg"> </i></a></li>
+                            <li><a href="#"><i class="fa fa-github fa-lg"> </i></a></li>
+                            <li><a href="#"><i class="fa fa-envelope fa-lg"> </i></a></li>
                         </ol>
                     </div>
                 </article>
