--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,62 @@
         {{/each}}
     </script>
     <main>
-        
+        <section>
+            <div class="container">
+                <h4 class="section-title">Contact Us</h4>
+                <form class="form">
+                    <div class="row">
+                        <div class="col-md-12 col-lg-6">
+                            <div class="form-item">
+                                <span>Full Name</span>
+                                <input type="text" name="fullName" id="">
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-lg-6">
+                            <div class="form-item">
+                                <span>Email</span>
+                                <input type="email" name="email" id="">
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-lg-6">
+                            <div class="form-item">
+                                <span>Telphone</span>
+                                <input type="tel" name="" id="">
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-lg-6">
+                            <div class="form-item">
+                                <span>Favorites topics</span>
+                                <input type="text" name="" id="">
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-lg-6">
+                            <div class="form-item">
+                                <span>Contact by email</span>
+                                <input type="radio" name="" id="">
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-lg-6">
+                            <div class="form-item">
+                                <span>Contact by phone</span>
+                                <input type="radio" name="" id="">
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-lg-12">
+                            <div class="form-item">
+                                <span>Your message</span>
+                                <textarea rows="8" placeholder="Your message here..." name="message"></textarea>
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-lg-10">
+                            <div class="form-item">
+                                <button class="btn-green">submit</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </section>
     </main>
     <footer>
         <section>
