--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="author" content="Lule moses" />
+    <meta name="title" content="Hultech" />
+    <meta name="description" content="Hultech is a news website that provide with all the lastest technology and science news,research and innovations from the all world."/>
+    <meta name="keywords" content="news,tech,programming,technology,tech uganda,tech resource,lulemoses,hultech" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +17,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-md-5 col-lg-2">
+                <div class="col-md-6 col-lg-2">
                     <h1 class="logo">hultech</h1>
                 </div>
                 <div class="col-md-5 col-lg-4">
@@ -23,7 +27,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-md-2 col-lg-6">
+                <div class="col-md-1 col-lg-6">
                     <ol class="navbar" id="nav">
                         <li class="navbar-item"><a href="#" class="btn btn-yellow">GET STARTED</a></li>
                     </ol>
