--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="blogs">
             <div class="container">
                 <h4 class="section-title">categories</h4>
                 <div class="row">
